--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 							<div class="row" style="display: flex; justify-content: center;">
 							  <div class="col-6 col-12-mobile">
 							    <article class="item" style="text-align: center;">
-							      <a href="#" class="image featured" style="display: block; margin: 0 auto; width: 400px;">
-								<img src="images/pic02.jpg" alt="" style="width: 100%; height: auto;" />
-							      </a>
+								<a href="#" class="image featured custom-bordered-image" style="display: block; margin: 0 auto; max-width: 600px;">
+								  <img src="images/pic02.jpg" alt="" style="width: 100%; height: auto;" />
+								</a>
 							      <header>
 								<h3></h3>
 							      </header>
