--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						</div>
 
 					<!-- Nav -->
-					<!--
+					
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
@@ -30,13 +30,14 @@
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
-						</nav> -->
+						</nav>
 
 				</div>
 
 				<div class="bottom">
 
 					<!-- Social Icons -->
+					<!-- 
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -44,6 +45,7 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
+					-->
 
 				</div>
 
