--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 								<h2>Contact</h2>
 							</header>
 
-							<p>Feel free to contact us for more information</p>
+							<p>Feel free to contact us for more information via email (info@bolt-ai.de) or by filling out the contact form below.</p>
 
 							<form method="post" action="#">
 								<div class="row">
