--- a/index.html
+++ b/index.html
@@ -202,23 +202,56 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+
 		<!-- Privacy Modal -->
-			<div id="privacy-modal" class="modal">
-			  <div class="modal-content">
-			    <span class="close" onclick="closeModal('privacy-modal')">&times;</span>
-			    <h2>Privacy Policy</h2>
-			    <p>This website does not use cookies or trackers. Personal data submitted via the contact form is used solely for responding to inquiries and is never shared with third parties.</p>
-			  </div>
-			</div>
-			
+		<div id="privacy-modal" class="modal">
+		  <div class="modal-content">
+		    <span class="close" onclick="closeModal('privacy-modal')">&times;</span>
+		    <h2>Privacy Policy</h2>
+		    <p>
+		      We take the protection of your personal data seriously. Personal data that you submit via this contact form
+		      (such as name, email address, and message) will be used solely for the purpose of handling your inquiry
+		      and will not be shared with third parties.
+		    </p>
+		    <p>
+		      The data transmission is secured via SSL encryption. Your data will only be stored for as long as necessary
+		      to process your request.
+		    </p>
+		    <p>
+		      Responsible in accordance with the GDPR:<br>
+		      <strong>Bolt-AI</strong><br>
+		      Email: info@bolt-ai.de
+		    </p>
+		    <p>
+		      You have the right at any time to access, delete, or correct your personal data.
+		    </p>
+		  </div>
+		</div>
+		
 		<!-- Legal Notice Modal -->
-			<div id="legal-modal" class="modal">
-			  <div class="modal-content">
-			    <span class="close" onclick="closeModal('legal-modal')">&times;</span>
-			    <h2>Legal Notice</h2>
-			    <p>Responsible for content: Bolt-AI Engineering<br>Email: info@bolt-ai.de</p>
-			  </div>
-			</div>
+		<div id="legal-modal" class="modal">
+		  <div class="modal-content">
+		    <span class="close" onclick="closeModal('legal-modal')">&times;</span>
+		    <h2>Legal Notice</h2>
+		    <p>
+		      This website is operated by:<br><br>
+		      <strong>Bolt-AI</strong><br>
+		      info@bolt-ai.de
+		    </p>
+		    <p>
+		      Responsible for content in accordance with § 55 para. 2 RStV:<br>
+		      Bolt-AI
+		    </p>
+		    <p>
+		      All content on this website is provided for general information purposes only.<br>
+		      No liability is assumed for the correctness, completeness, or accuracy of the information.
+		    </p>
+		    <p>
+		      Copyright © Bolt-AI. All rights reserved.
+		    </p>
+		  </div>
+		</div>
+				
 
 		<script>
 		function openModal(id) {
