--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
 									<div class="col-12">
 										<label style="font-size: 0.9em;">
 											<input type="checkbox" name="privacy" required />
-											I have read the <a href="privacy.html" target="_blank">Privacy Policy</a> and agree to the processing of my personal data.
+											I have read the <a href="#" onclick="openModal('privacy-modal')">Privacy Policy</a> and agree to the processing of my personal data.
 										</label>
+
 									</div>
 									
 									<div class="col-12">
