--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/pic088.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/pic088.jpg" alt="Portrait" /></span>
 							<h1 id="title">Bolt-AI</h1>
 							<p>Engineer </p>
 						</div>
