--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 				</div>
 
 				<div class="bottom">
+					<div class="language-switch" style="text-align: center; margin-top: 1em;">
+						<a href="index.html">🇩🇪 DE</a> |
+						<a href="index-en.html">🇬🇧 EN</a>
+					</div>
 
 					<!-- Social Icons -->
 					<!-- 
