--- a/index-en.html
+++ b/index-en.html
@@ -9,6 +9,11 @@
 	</head>
 	<body class="is-preload">
 
+			<div class="language-switch" style="position: absolute; top: 1.5em; right: 2em; z-index: 1000; font-size: 0.9em;">
+			  <a href="index.html" style="margin-right: 0.5em;">🇩🇪 DE</a>
+			  <a href="index-en.html">🇬🇧 EN</a>
+			</div>
+		
 		<!-- Header -->
 			<div id="header">
 
@@ -34,11 +39,12 @@
 
 				</div>
 
-				<div class="bottom">
+				<!-- Sprachbuttons in der sidebar -->
+				<!--<div class="bottom">
 					<div class="language-switch" style="text-align: center; margin-top: 1em;">
 						<a href="index.html">🇩🇪 DE</a> |
 						<a href="index-en.html">🇬🇧 EN</a>
-					</div>
+					</div> -->
 
 					<!-- Social Icons -->
 					<!-- 
