--- a/index-en.html
+++ b/index-en.html
@@ -82,22 +82,20 @@
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2><strong>Portfolio<strong></h2>
 							</header>
 
 							<div class="row aln-center">
-							  <div class="col-6 col-12-mobile">
-							    <ul style="list-style-position: inside; padding-left: 1rem; text-align: left;">
-							      <li>Consulting for tailored AI solutions</li>
-							      <li>AI-based Data analysis: f.e. CAD, Acoustics, Vibration and Visual Data</li>
-							      <li>Development of Deep Learning Pipelines for engineering applications</li>						
-							      <li>Pattern recognition, anomaly detection, clustering </li>
-							      <li>Quality improvement and process optimization</li>
+							  <div class="col-10 col-12-mobile">
+							    <ul class="custom-service-list">
+								   <li><strong>Consulting for tailored AI solutions and application possibilities<strong></li>
+								   <li><strong>Quality improvement and process optimization<strong></li>
+								   <li><strong>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data<strong></li>
+								   <li><strong>Pattern recognition, anomaly detection, clustering<strong></li>
+								   <li><strong>Development of Deep Learning Pipelines<strong></li>						
 							    </ul>
 							  </div>
 							</div>
-
-							
 
 							<div class="row" style="display: flex; justify-content: center;">
 							  <div class="col-6 col-12-mobile">
@@ -145,7 +143,7 @@
 					    </a>
 					
 					    <p>
-					      I'm Vladislav Bolt, a trained engineer with deep technical expertise and a focus on Deep Learning and AI.
+					      I'm Vladislav Bolt, a trained engineer (M.Sc.) with deep technical expertise and a focus on Deep Learning and AI.
 					      Through Bolt-AI, I combine my engineering background with cutting-edge AI to help companies optimize their processes.
 					      My goal: clear, purpose-driven, and innovative solutions.
 					    </p>
