--- a/index-en.html
+++ b/index-en.html
@@ -84,18 +84,21 @@
 							<header>
 								<h2><strong>Portfolio<strong></h2>
 							</header>
-
+									
 							<div class="row aln-center">
-							  <div class="col-10 col-12-mobile">
-							    <ul class="custom-service-list">
-								   <li><strong>Consulting for tailored AI solutions and application possibilities<strong></li>
-								   <li><strong>Quality improvement and process optimization<strong></li>
-								   <li><strong>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data<strong></li>
-								   <li><strong>Pattern recognition, anomaly detection, clustering<strong></li>
-								   <li><strong>Development of Deep Learning Pipelines<strong></li>						
-							    </ul>
+							  <div class="col-12">
+							    <div class="custom-service-list">
+							      <ul class="clean-list">
+								   <li><span>Consulting for tailored AI solutions and application possibilities<span></li>
+								   <li><span>Quality improvement and process optimization<span></li>
+								   <li><span>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data<span></li>
+								   <li><span>Pattern recognition, anomaly detection, clustering<span></li>
+								   <li><span>Development of Deep Learning Pipelines<span></li>	
+							      </ul>
+							    </div>
 							  </div>
 							</div>
+
 
 							<div class="row" style="display: flex; justify-content: center;">
 							  <div class="col-6 col-12-mobile">
