--- a/index-en.html
+++ b/index-en.html
@@ -89,11 +89,11 @@
 							  <div class="col-12">
 							    <div class="custom-service-list">
 							      <ul class="clean-list">
-								   <li><span>Consulting for tailored AI solutions and application possibilities<span></li>
-								   <li><span>Quality improvement and process optimization<span></li>
-								   <li><span>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data<span></li>
-								   <li><span>Pattern recognition, anomaly detection, clustering<span></li>
-								   <li><span>Development of Deep Learning Pipelines<span></li>	
+								   <li>Consulting for tailored AI solutions and application possibilities</li>
+								   <li>Quality improvement and process optimization</li>
+								   <li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
+								   <li>Pattern recognition, anomaly detection, clustering</li>
+								   <li>Development of Deep Learning Pipelines</li>	
 							      </ul>
 							    </div>
 							  </div>
