--- a/index-en.html
+++ b/index-en.html
@@ -85,18 +85,14 @@
 								<h2><strong>Portfolio<strong></h2>
 							</header>
 									
-							<div class="row aln-center">
-							  <div class="col-12">
-							    <div class="custom-service-list">
-							      <ul class="clean-list">
-								   <li>Consulting for tailored AI solutions and application possibilities</li>
-								   <li>Quality improvement and process optimization</li>
-								   <li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
-								   <li>Pattern recognition, anomaly detection, clustering</li>
-								   <li>Development of Deep Learning Pipelines</li>	
-							      </ul>
-							    </div>
-							  </div>
+							<div class="section-centered-content">
+							  <ul class="clean-list">
+							    <li>Consulting for tailored AI solutions and application possibilities</li>
+							    <li>Quality improvement and process optimization</li>
+							    <li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
+							    <li>Pattern recognition, anomaly detection, clustering</li>
+							    <li>Development of Deep Learning Pipelines</li>
+							  </ul>
 							</div>
 
 
