--- a/index-en.html
+++ b/index-en.html
@@ -84,7 +84,22 @@
 							<header>
 								<h2><strong>Portfolio<strong></h2>
 							</header>
+
+							<div class="row aln-center">
+							  <div class="col-6 col-12-mobile">
+							    <ul style="list-style-position: inside; padding-left: 1rem; text-align: left;">
+								    <li>Consulting for tailored AI solutions and application possibilities</li>
+								    <li>Quality improvement and process optimization</li>
+								    <li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
+								    <li>Pattern recognition, anomaly detection, clustering</li>
+								    <li>Development of Deep Learning Pipelines</li>
+							    </ul>
+							  </div>
+							</div>
+
+
 									
+							<!--
 							<div class="section-centered-content">
 							  <ul class="clean-list">
 							    <li>Consulting for tailored AI solutions and application possibilities</li>
@@ -94,6 +109,7 @@
 							    <li>Development of Deep Learning Pipelines</li>
 							  </ul>
 							</div>
+									-->
 
 
 							<div class="row" style="display: flex; justify-content: center;">
