--- a/index-en.html
+++ b/index-en.html
@@ -147,7 +147,7 @@
 					    }
 					  </style>
 					
-					  <div class="container">
+					  <div class="container centered-section">
 					
 					    <header>
 					      <h2>About Me</h2>
@@ -169,7 +169,7 @@
 
 				<!-- Contact -->
 					<section id="contact" class="four">
-						<div class="container">
+						<div class="container centered-section">
 
 							<header>
 								<h2>Contact</h2>
