--- a/index-en.html
+++ b/index-en.html
@@ -165,7 +165,7 @@
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
 									<div class="col-12">
-										<textarea name="message" placeholder="Nachricht"></textarea>
+										<textarea name="message" placeholder="Message"></textarea>
 									</div>
 									
 									<div class="col-12">
@@ -217,21 +217,20 @@
 		<div id="privacy-modal" class="modal">
 		  <div class="modal-content">
 		    <span class="close" onclick="closeModal('privacy-modal')">&times;</span>
-		    <h2>Datenschutzerklärung</h2>
+		    <h2>Privacy Policy</h2>
 		    <p>
-		      Der Schutz Ihrer personenbezogenen Daten ist uns ein wichtiges Anliegen. Personenbezogene Daten, die Sie über dieses Kontaktformular übermitteln
-		      (z. B. Name, E-Mail-Adresse, Nachricht), werden ausschließlich zur Bearbeitung Ihrer Anfrage verwendet und nicht an Dritte weitergegeben.
+		      We take the protection of your personal data seriously. Personal data that you submit via this contact form (such as name, email address, and message) will be used solely for the purpose of handling your inquiry and will not be shared with third parties.
 		    </p>
 		    <p>
-		      Die Übertragung Ihrer Daten erfolgt verschlüsselt über SSL. Ihre Daten werden nur so lange gespeichert, wie dies zur Bearbeitung Ihres Anliegens erforderlich ist.
+		      The data transmission is secured via SSL encryption. Your data will only be stored for as long as necessary to process your request.
 		    </p>
 		    <p>
-		      Verantwortlich im Sinne der Datenschutz-Grundverordnung (DSGVO):<br>
+		      Responsible in accordance with the GDPR (DSGVO):<br>
 		      <strong>Bolt-AI</strong><br>
 		      E-Mail: info@bolt-ai.de
 		    </p>
 		    <p>
-		      Sie haben jederzeit das Recht auf Auskunft, Berichtigung oder Löschung Ihrer personenbezogenen Daten.
+		      You have the right at any time to access, delete, or correct your personal data.
 		    </p>
 		  </div>
 		</div>
@@ -240,21 +239,21 @@
 		<div id="legal-modal" class="modal">
 		  <div class="modal-content">
 		    <span class="close" onclick="closeModal('legal-modal')">&times;</span>
-		    <h2>Impressum</h2>
+		    <h2>Legal Notice</h2>
 		    <p>
-		      Betreiber dieser Website:<br><br>
+		      This website is operated by:<br><br>
 		      <strong>Bolt-AI</strong><br>
 		      info@bolt-ai.de
 		    </p>
 		    <p>
-		      Verantwortlich für den Inhalt gemäß § 55 Abs. 2 RStV:<br>
+		      Responsible for content in accordance with § 55 para. 2 RStV<br>
 		      Bolt-AI
 		    </p>
 		    <p>
-		      Die Inhalte dieser Website dienen ausschließlich der allgemeinen Information. Es wird keine Haftung für die Richtigkeit, Vollständigkeit oder Aktualität der bereitgestellten Informationen übernommen.
+		      All content on this website is provided for general information purposes only. No liability is assumed for the correctness, completeness, or accuracy of the information.
 		    </p>
 		    <p>
-		      Copyright © Bolt-AI. Alle Rechte vorbehalten.
+		      Copyright © Bolt-AI. All rights reserved.
 		    </p>
 		  </div>
 		</div>
