--- a/index-en.html
+++ b/index-en.html
@@ -83,25 +83,25 @@
 				      <h2>Portfolio</h2>
 				    </header>
 				
-				    <div style="margin: 0 auto; padding: 0 1em; text-align: left;">
-				      <ul style="list-style: none; padding: 0; margin: 0;">
-				        <li style="display: flex; align-items: flex-start; margin-bottom: 1em;">
+				    <div style="margin: 0 auto; width: 100%; padding: 0 2em; text-align: left;">
+				      <ul style="list-style-type: disc; list-style-position: outside; padding-left: 1.5em;">
+				        <li style="margin-bottom: 1em; text-indent: -1.5em; padding-left: 1.5em;">
 				          <span style="min-width: 1.2em; padding-right: 0.5em;">•</span>
 				          <span style="display: block;">Consulting for tailored AI solutions and application possibilities</span>
 				        </li>
-				        <li style="display: flex; align-items: flex-start; margin-bottom: 1em;">
+				        <li style="margin-bottom: 1em; text-indent: -1.5em; padding-left: 1.5em;">
 				          <span style="min-width: 1.2em; padding-right: 0.5em;">•</span>
 				          <span style="display: block;">Quality improvement and process optimization</span>
 				        </li>
-				        <li style="display: flex; align-items: flex-start; margin-bottom: 1em;">
+				        <li style="margin-bottom: 1em; text-indent: -1.5em; padding-left: 1.5em;">
 				          <span style="min-width: 1.2em; padding-right: 0.5em;">•</span>
 				          <span style="display: block;">AI-based data analysis: e.g. CAD, acoustics, vibration and visual data</span>
 				        </li>
-				        <li style="display: flex; align-items: flex-start; margin-bottom: 1em;">
+				        <li style="margin-bottom: 1em; text-indent: -1.5em; padding-left: 1.5em;">
 				          <span style="min-width: 1.2em; padding-right: 0.5em;">•</span>
 				          <span style="display: block;">Pattern recognition, anomaly detection, clustering</span>
 				        </li>
-				        <li style="display: flex; align-items: flex-start; margin-bottom: 1em;">
+				        <li style="margin-bottom: 1em; text-indent: -1.5em; padding-left: 1.5em;">
 				          <span style="min-width: 1.2em; padding-right: 0.5em;">•</span>
 				          <span style="display: block;">Development of deep learning pipelines</span>
 				        </li>
