--- a/index-en.html
+++ b/index-en.html
@@ -85,7 +85,7 @@
 
 							<div class="row aln-center">
 							  <div class="col-6 col-12-mobile">
-							    <ul style="list-style-position: inside; padding-left: 1rem; text-align: left;">
+							    <ul style="list-style-position: inside; padding-left: 1.5em; text-align: left;">
 								<li>Consulting for tailored AI solutions and application possibilities</li>
 								<li>Quality improvement and process optimization</li>
 								<li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
