--- a/index-en.html
+++ b/index-en.html
@@ -85,8 +85,8 @@
 							</header>
 
 							<div class="row aln-center">
-							  <div class="col-8 col-12-mobile">
-							    <ul style="list-style-position: outside; padding-left: 1.2em; text-align: left;">
+							  <div class="col-6 col-12-mobile">
+							    <ul style="list-style-position: outside; top: 50%; padding-left: 1.2em; text-align: left;">
 								<li>Consulting for tailored AI solutions and application possibilities</li>
 								<li>Quality improvement and process optimization</li>
 								<li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
