--- a/index-en.html
+++ b/index-en.html
@@ -83,19 +83,20 @@
 							<header>
 								<h2>Portfolio</h2>
 							</header>
-
-							<div class="row aln-center">
-							  <div class="col-10 col-12-mobile">
-							    <ul style="list-style-position: outside; top: 50%; padding-left: 1.2em; text-align: left;">
-								<li>Consulting for tailored AI solutions and application possibilities</li>
-								<li>Quality improvement and process optimization</li>
-								<li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
-								<li>Pattern recognition, anomaly detection, clustering</li>
-								<li>Development of Deep Learning Pipelines</li>
-							    </ul>
-							  </div>
-							</div>
-
+							
+							<div style="position: fixed; top: 50%; right: 2rem; transform: translateY(-50%); z-index: 1000;">
+								<div class="row aln-center">
+								  <div class="col-6 col-12-mobile">
+								    <ul style="list-style-position: outside; padding-left: 1.2em; text-align: left;">
+									<li>Consulting for tailored AI solutions and application possibilities</li>
+									<li>Quality improvement and process optimization</li>
+									<li>AI-based Data analysis: e.g. CAD, Acoustics, Vibration and Visual Data</li>
+									<li>Pattern recognition, anomaly detection, clustering</li>
+									<li>Development of Deep Learning Pipelines</li>
+								    </ul>
+								  </div>
+								</div>
+							</div>	
 							
 
 							<div class="row" style="display: flex; justify-content: center;">
