--- a/index-en.html
+++ b/index-en.html
@@ -84,7 +84,7 @@
 								<h2>Portfolio</h2>
 							</header>
 							
-							<div style="position: fixed; top: 50%; right: 2rem; transform: translateY(-50%); z-index: 1000;">
+							<div style=" top: 50%; transform: translateY(-50%);">
 								<div class="row aln-center">
 								  <div class="col-6 col-12-mobile">
 								    <ul style="list-style-position: outside; padding-left: 1.2em; text-align: left;">
