--- a/index-en.html
+++ b/index-en.html
@@ -86,7 +86,7 @@
 							
 							<div style=" align-items: center">
 								<div class="row aln-center">
-								  <div class="col-6 col-12-mobile">
+								 <!-- <div class="col-6 col-12-mobile">-->
 								    <ul style="list-style-position: outside; padding-left: 1.2em; text-align: left;">
 									<li>Consulting for tailored AI solutions and application possibilities</li>
 									<li>Quality improvement and process optimization</li>
@@ -94,7 +94,7 @@
 									<li>Pattern recognition, anomaly detection, clustering</li>
 									<li>Development of Deep Learning Pipelines</li>
 								    </ul>
-								  </div>
+								  <!--</div>-->
 								</div>
 							</div>	
 							
