--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt" style="font-size: 2.5em; font-weight: 600;">BOLT-AI</h2>
-                                                                <p style="font-size: 1.1em; color: #eeeeee;">Transforming Engineering through Smart AI Solutions</p>
-	
+								<h2 class="alt" style="font-size: 2.5em; font-weight: 600; color: #333333;">BOLT-AI</h2>
+								<p style="font-size: 1.1em; color: #333333;">Transforming Engineering through Smart AI Solutions</p>
 							</header>
 
 						</div>
