--- a/index.html
+++ b/index.html
@@ -82,19 +82,20 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<div class="row aln-center">
-							  <div class="col-6 col-12-mobile">
-							    <ul style="list-style-position: inside; padding-left: 1rem; text-align: left;">
-								<li>Consulting für maßgeschneiderte KI-Lösungen</li>
-								<li>KI-gestützte Datenanalyse, z. B. CAD-, Akustik-, Schwingungs- und Bilddaten</li>
-								<li>Entwicklung von Deep-Learning-Pipelines für technische Anwendungen</li>
-								<li>Mustererkennung, Anomaliedetektion und Clustering</li>
-								<li>Qualitätssteigerung und Prozessoptimierung</li>
-							    </ul>
-							  </div>
-							</div>
 
-							
+							<div style=" align-items: center">
+								<div class="row aln-center">
+								  <div class="col-12-mobile">
+								    <ul style="list-style-position: outside; padding-left: 1.2em; text-align: left;">
+									<li>Consulting für maßgeschneiderte KI-Lösungen und Anwendungsmöglichkeiten</li>
+									<li>Qualitätssteigerung und Prozessoptimierung</li>
+									<li>KI-gestützte Datenanalyse, z. B. CAD-, Akustik-, Schwingungs- und Bilddaten</li>
+									<li>Pattern recognition, anomaly detection, clustering</li>
+									<li>Entwicklung von Deep Learning Pipelines</li>
+								    </ul>
+								  </div>
+								</div>
+							</div>	
 
 							<div class="row" style="display: flex; justify-content: center;">
 							  <div class="col-6 col-12-mobile">
