index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 							<p>Zögern Sie nicht, uns für weitere Informationen per E-Mail (info@bolt-ai.de) oder über das Kontaktformular zu kontaktieren.</p>
 
-							<form method="post" action="#">
+							<form method="post" action="https://formsubmit.co/info@bolt-ai.de">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -179,7 +179,7 @@
 									</div>
 									
 									<div class="col-12">
-										<input type="submit" value="Send Message" />
+										<input type="submit" value="Nachricht senden" />
 									</div>
 								</div>
 							</form>
