--- a/index-en.html
+++ b/index-en.html
@@ -161,7 +161,7 @@
 
 							<p>Feel free to contact us for more information via email (info@bolt-ai.de) or by filling out the contact form below.</p>
 
-							<form method="post" action="#">
+							<form method="post" action="https://formsubmit.co/info@bolt-ai.de">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
